--- a/index.html
+++ b/index.html
@@ -5,28 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express 공부 중입니다</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1 id="sound"></h1>
-    <img id="img" src="" width="500" height="600" />
-    <input id="name" type="text">
+    <h1 id="sound">Welcome</h1>
 
+    <!-- Placeholder for animation -->
+    <div id="placeholder">
+        <div class="spinner"></div>
+    </div>
+
+    <!-- Image -->
+    <img id="img" src="" />
+
+    <!-- Input and button -->
+    <input id="name" type="text" placeholder="Enter name">
     <button onclick="getSound()">API 요청</button>
+
     <script>
         function getSound() {
-            const name = document.getElementById('name').value
-            fetch(`http://localhost:5000/sound/${name}`) // api for the get request
+            const name = document.getElementById('name').value;
+
+            // Show spinner
+            document.getElementById('placeholder').style.display = 'flex';
+            document.getElementById('img').style.display = 'none';
+
+            fetch(`http://localhost:5000/sound/${name}`) // API for the GET request
                 .then(response => response.json())
                 .then(data => {
-                    console.log(data)
-                    document.getElementById('sound').innerHTML = data.sound
-                    document.getElementById('img').src = data.img; 
+                    console.log(data);
+                    document.getElementById('sound').innerHTML = data.sound;
+
+                    // Hide spinner and show image
+                    document.getElementById('placeholder').style.display = 'none';
+                    const img = document.getElementById('img');
+                    img.src = data.img;
+                    img.style.display = 'block';
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('Failed to fetch data!');
+                    // Hide spinner
+                    document.getElementById('placeholder').style.display = 'none';
                 });
         }
     </script>
-
-    </input>
 </body>
 
 </html>
